--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,13 @@
 body {
   magrin: 0;
   padding: 0;
-  background-color: #111111;
+  background-color: #333333;
   color: #ffffff;
 }
 a {
   decoration: none;
 }
 .article-text {
-  font-size: 16px;
-  background-color: skyblue;
-  color: orange;
+  font-size: 18px;
+  color: skyblue;
 }
